fix: double scrollbar

--- a/apps/gauzy/src/app/pages/time-off/time-off.component.scss
+++ b/apps/gauzy/src/app/pages/time-off/time-off.component.scss
@@ -12,7 +12,11 @@
     display: flex;
     flex-direction: column;
   }
-  @include nb-card-overrides(unset, $default-card-height, $default-radius);
+  @include nb-card-overrides(
+    unset,
+    calc($default-card-height - 1rem),
+    $default-radius
+  );
 }
 
 nb-radio-group {
